# task-tracker

./: CMakeLists.txt  CMakePresets.json  README.MD  main.cpp
database/: CREATE.sql
include/: CLArgs.h  CLI.h  CLInterface.h  CommandDispatcher.h  CommandLineArguments.h  CommandRepository.h  ConnectionString.h  DatabaseConnectionConfig.h  TaskRepository.h  task.h
src/: CLArgs.cpp  CLInterface.cpp  CommandDispatcher.cpp  CommandLineArguments.cpp  CommandRepository.cpp  DatabaseConnectionConfig.cpp  TaskRepository.cpp  main.cpp
